# SmartInv

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/web/: package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
docs/: SmartInv_Architecture.docx  index.md  smartinv-ui.html  smartinv_feature_specification.docx  smartinv_ui_vs_spec_comparison.docx
docs/architecture/: full-architecture.md  mvp-architecture.md
docs/process/: engineering-principles.md
docs/project/: decisions.md  roadmap.md
scripts/: anomalies.py  bootstrap_buckets.py  check_infra.py  dedup.py  dev_token.py  dispatch.py  forecast.py  no-raw-hex.mjs  optimize.py  risk.py  score.py  seed_dev.py  sync_fixtures.py
services/api/: alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 21516e9bb4a6_create_least_privilege_app_role.py  5f474b8b27e1_add_item_health_score_columns.py  636dd6342d66_initial_schema.py  7a266032b044_enable_row_level_security.py  92e695036b7b_add_anomalies_table.py  a1b2c3d4e5f6_cv6_source_writes.py  a7a6b9eaa367_cv4_risk_columns_and_supplier_.py  a9a28d4e9181_add_duplicate_candidates_table.py  c72ee81a0e02_cv3_lead_time_and_recommendation_.py  d1c2f3a4b5c6_cv6_configurable_approval_path.py  e2d3c4b5a6f7_cv6_approval_policies.py  f3a4b5c6d7e8_cv6_audit_event_indexes.py
services/api/src/api/: __init__.py  config.py  main.py
services/api/src/api/agent/: __init__.py  catalog.py  grounding.py  history.py  orchestrator.py
services/api/src/api/anomaly/: __init__.py  engine.py  model.py  service.py
services/api/src/api/audit/: __init__.py  service.py
services/api/src/api/auth/: __init__.py  dependencies.py  models.py  tokens.py
services/api/src/api/contracts/: __init__.py  llm_gateway.py  object_store.py  search_index.py  workflow_engine.py
services/api/src/api/db/: __init__.py  base.py  session.py
services/api/src/api/db/models/: __init__.py  agent.py  audit.py  core.py  inventory.py  ml.py  rag.py  sources.py  workflow.py
services/api/src/api/dedup/: __init__.py  engine.py  model.py  service.py
services/api/src/api/dispatch/: __init__.py  service.py  writer.py
services/api/src/api/feedback/: __init__.py  service.py
services/api/src/api/forecast/: __init__.py  engine.py  model.py  service.py
services/api/src/api/infra/: __init__.py  llm_gateway.py  object_store.py  providers.py  search_index.py  workflow_engine.py
services/api/src/api/ingestion/: __init__.py  connector.py  fixture_sync.py  fixtures.py  service.py  upserts.py
services/api/src/api/optimize/: __init__.py  engine.py  model.py  service.py
services/api/src/api/risk/: __init__.py  engine.py  model.py  service.py
services/api/src/api/routers/: __init__.py  admin.py  agents.py  anomalies.py  approvals.py  audit.py  dev_auth.py  duplicates.py  forecast.py  identity.py  inventory.py  recommendations.py  risk.py
services/api/src/api/scoring/: __init__.py  engine.py  model.py  service.py
services/api/src/api/workflow/: __init__.py  policies.py
services/api/tests/: conftest.py  test_anomaly.py  test_audit_coverage.py  test_dedup.py  test_forecast.py  test_forecast_bucketing.py  test_grounding.py  test_health.py  test_langfuse_gateway.py  test_optimize.py  test_risk.py  test_scoring.py
services/api/tests/contracts/: test_llm_gateway.py  test_object_store.py  test_search_index.py  test_workflow_engine.py
services/api/tests/dispatch/: test_writer.py
services/api/tests/integration/: test_agents_history_views.py  test_agents_views.py  test_anomalies_views.py  test_anomaly_service.py  test_auth_tenancy.py  test_cv3_service.py  test_db_rls.py  test_dedup_service.py  test_dispatch_service.py  test_duplicates_views.py  test_forecast_views.py  test_ingestion.py  test_inventory_views.py  test_recommendations_views.py  test_risk_service.py  test_risk_views.py  test_scoring_service.py
services/api/tests/workflow/: test_policies.py
(+144 files in other folders)
