[project]
name = "smartinv"
version = "0.1.0"
description = "SmartInv — AI-Powered MRO Inventory Intelligence Platform"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["services/*"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    # Infra connectivity tooling (CV1.E4 scripts). The production DB/cache/
    # object-store drivers are chosen in CV1.E5/E7; these power the dev-only
    # bootstrap and smoke-test scripts.
    "boto3>=1.35.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "T20", # flake8-print
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101"]  # allow asserts in tests
# Dev scripts: imports follow a sys.path bootstrap (E402) and print to stdout (T20).
"scripts/**" = ["E402", "T201", "T203"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["services"]
pythonpath = ["services/api/src"]
asyncio_mode = "auto"
