[project]
name = "api"
version = "0.1.0"
description = "SmartInv API service (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Persistence (CV1.E5): SQLAlchemy 2.0 ORM + Alembic migrations,
    # psycopg 3 as the single sync/async driver, pgvector for embeddings.
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.6",
    # Identity (CV1.E6): JWT verification. MVP signs HS256 dev tokens; the
    # same library verifies RS256/JWKS when a real IdP is wired later.
    "pyjwt>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
